[package]
name = "tako"
version = "0.0.0"
license = "Apache-2.0"
authors = [
  "Arian van Putten <aeroboy94@gmail.com>",
  "Ruud van Asseldonk <dev@veniogames.com>",
  "Tako Marks <me@tako.mx>"
]

[dependencies]
base64      = "0.9.0"
filebuffer  = "0.4.0"

# We use "rust_sodium" rather than "sodiumoxide" because the former can link
# libsodium statically, and CoreOS does not ship libsodium at the moment of
# writing, so for single-binary deployment we would need to link it statically.
rust_sodium = "0.9"

[profile.release]
# For the release build, optimize for size.
panic = "abort"
lto = true
codegen-units = 1
incremental = false

# TODO: Enable this once opt-level="z" works on Rust stable.
# Optimize for size, not speed.
# opt-level = "z"
